# stock_up

./: .clauderc  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Dockerfile  README.md  REQUIREMENTS.md  config.yaml  docker-compose.yml  explore_db.ipynb  main.py  pyproject.toml
.claude/skills/duckdb/: .skillfish.json
.github/workflows/: pylint.yml
backtest/: __main__.py  report.py  runner.py  strategy.py
core/: interfaces.py  models.py
crawler/: pyproject.toml  rss_fetcher.py  rss_parser.py
engine/: news_evaluator.py  recommender.py  rule_engine.py  sentiment.py
indicators/: fundamental.py  technical.py
portfolio/: paper_trader.py  performance.py  position.py
providers/fundamental/: yfinance_fundamental.py
providers/news/: rate_limiter.py  rss_provider.py
providers/price/: yfinance_provider.py
screener/: stock_screener.py
sender/: __init__.py  formatters.py  pyproject.toml  sector_report_formatter.py  slack_sender.py  translator.py
sender/tests/: test_slack_sender.py
storage/: models.py  news_store.py  pg_client.py  stock_store.py  symbol_extractor.py
tests/backtest/: test_report.py
tests/engine/: test_recommender.py  test_rule_engine.py
tests/indicators/: test_fundamental.py  test_technical.py
tests/portfolio/: test_paper_trader.py
tests/providers/: test_rate_limiter.py
tests/screener/: test_stock_screener.py
tests/sender/: test_slack_sender.py
tests/storage/: test_news_store.py  test_pg_client.py  test_symbol_extractor.py
utils/: config_loader.py  dup_check.py  file_ctrl.py
