[project]
name = "sender"
version = "0.1.0"
description = "Slack message sender for stock_up application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.12.9",
    "pandas>=2.3.2",
    "responses>=0.25.8",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
