[project]
name = "stock_up"
version = "0.2.0"
description = "Stock recommendation system with news, indicators, and paper trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.2",
    "feedparser>=6.0.10",
    "openai>=1.0.0",
    "yfinance>=0.2.36",
    "pyyaml>=6.0",
    "backtrader>=1.9.78",
    "numpy>=1.26.0",
    "lxml>=5.0.0",
    "duckdb>=1.0.0",
    "defusedxml>=0.7.1",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = ["black>=25.1.0", "isort>=6.0.1", "ruff>=0.12.9", "pylint>=3.3.8"]
test = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "responses>=0.24.0"]

[tool.setuptools.packages.find]
include = [
    "core*", "crawler*", "engine*", "indicators*", "providers*",
    "portfolio*", "screener*", "sender*", "storage*", "utils*", "backtest*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
